# mathinker

./: Makefile  pyproject.toml
mathinker/: db.sqlite3  manage.py
mathinker/mathinker/: asgi.py  settings.py  urls.py  wsgi.py
mathinker/problems/: admin.py  models.py
src/config/: asgi.py
src/config/settings/: __init__.py  settings.py
src/core/: asgi.py  urls.py  wsgi.py
src/core/settings/: settings.py
src/problems/: admin.py  models.py
