[tool.poetry]
name = "maths-problem-website"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
