[tool.poetry]
name = "maths-problem-website"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django-split-settings = "^1.2.0"
django-debug-toolbar = "^4.2.0"
django-taggit = "^5.0.1"
django-allauth = "^0.59.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
